SETTINGS: Migrate the EDI account pages
