# koha-tmpl/intranet-tmpl/prog/js/vue/routes/acquisitions/acquisitions.js
@@ -313,6 +313,46 @@ export const routes = [
                     },
                 ],
             },
+            {
+                path: "/cgi-bin/koha/acquisitions/edi_accounts",
+                title: $__("EDI accounts"),
+                icon: "fa fa-right-left",
+                resource: "Acquisitions/EdiAccountResource.vue",
+                children: [
+                    {
+                        path: "",
+                        component: markRaw(ResourceWrapper),
+                        name: "EdiAccountList",
+                        title: $__("List EDI accounts"),
+                        permission: "edi_manage",
+                        is_navigation_item: false,
+                    },
+                    {
+                        path: ":vendor_edi_account_id",
+                        component: markRaw(ResourceWrapper),
+                        name: "EdiAccountShow",
+                        title: $__("Show EDI account"),
+                        permission: "edi_manage",
+                        is_navigation_item: false,
+                    },
+                    {
+                        path: "add",
+                        component: markRaw(ResourceWrapper),
+                        name: "EdiAccountFormAdd",
+                        title: $__("Add EDI account"),
+                        permission: "edi_manage",
+                        is_navigation_item: false,
+                    },
+                    {
+                        path: "edit/:vendor_edi_account_id",
+                        component: markRaw(ResourceWrapper),
+                        name: "EdiAccountFormAddEdit",
+                        title: $__("Edit EDI account"),
+                        permission: "edi_manage",
+                        is_navigation_item: false,
+                    },
+                ],
+            },
         ],
     },
 ];
